# my_NES_emu

./: AGENTS.md  CMakeLists.txt  README.md
include/: bus.h  cpu.h  types.h
src/: bus.cpp  cpu.cpp  main.cpp
tests/: test_cpu.cpp  test_framework.cpp  test_framework.h
